2000-10-23 23:29 GMT+2 Maurilio Longo <maurilio.longo@libero.it>
   * contrib/mysql/*.prg
      * changes / fixes as needed :-)
   * include/hbdbf.h
      + added #pragma pack() for GCC under OS/2

2000-10-23 14:00 UTC-0400 David G. Holm <dholm@jsd-llc.com>
   * include/hbver.h
     * Bumped revision code to "i" and date to 2000-10-23 in
       preparation for another interim release.

2000-10-23 18:15 GMT+2 Maurilio Longo <maurilio.longo@libero.it>
   * source/rtl/teditor.prg
      + added KeyboardHook() and IdleHook() methods.
   * contrib/mysql/tsqlbrw.prg
      + little changes.

2000-10-22 09:05 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * source/compiler/simplex.c
     ! Corrrected bug reported by Luiz regarding menuto.prg

   * source/compiler/harbour.slx
     ! Corrected 1 debug trace message.

   * contrib/dot/pp.prg
     ! Corrected "Unbalanced '{'" warning reported by John.
     ! Corrected 2 typos in variable names reported by John.

2000-10-21 23:02 GMT+2 Maurilio Longo <maurilio.longo@libero.it>
   * source/vm/hvm.c
      + Added an exception handler to be able to print a full harbour level stack trace upon
        abnormal program termination. This is OS/2 only.
   * source/rtl/gtos2/gtos2.c
      ! Little change on extended chars handling. Should make no difference.
   * include/hbdefs.h
      * changed to have OS/2 exception management defines included.

2000-10-20 00:30 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * contrib/dot/pp.prg
     * Forced uppercase and trim of restricted words.

2000-10-19 23:15 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * contrib/dot/pp.prg
     * Minor corrections.

2000-10-19 22:00 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * contrib/dot/pp.prg
     ! Fixed checking of stoppers for #XCOMMAND/#XTRANSLATE
       /* No longer known issues - I think it's ready for serious testing ;-) */

2000-10-19 19:40 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * contrib/dot/pp.prg