@@ -86,8 +86,8 @@ int main( int argc, char * argv[] )
   unsigned int i;
   BOOL bOutTable = FALSE;
   BOOL bOutNew = FALSE;
-  DEFINES * stdef = hb_pp_topDefine;
-  COMMANDS * stcmd = hb_pp_topCommand;
+  DEFINES * stdef;
+  COMMANDS * stcmd;
 
   HB_TRACE(HB_TR_DEBUG, ("main(%d, %p)", argc, argv));
 
@@ -95,6 +95,9 @@ int main( int argc, char * argv[] )
     HB_VER_MAJOR, HB_VER_MINOR, HB_VER_REVISION, HB_VER_BUILD, HB_VER_YEAR, HB_VER_MONTH, HB_VER_DAY );
   printf( "Copyright 1999-2000, http://www.harbour-project.org\n" );
 
+  hb_pp_Table();
+  stdef = hb_pp_topDefine;
+  stcmd = hb_pp_topCommand;
   hb_pp_Init();
 
   while( iArg < argc )
